added tea ui flow (#10)
* added tea ui flow
* make probe more lenient, decompress archived images now
* fixed generate-serial-number script
* add progress bar
* improved checkTezsignMarker
* download automatically latest image for the provided gadget type if none provided
* auto inject .image-flavour
* do not try to create dir if it already exists
* direct tezsing overwrite and ./image-flavor
* broker retries
* performance tuning
* help runtime with timing GC
* disable default log file for host
* check mount availability before app update
* cleaned up log
* libusb writer
* libusb adapter chunking
* refactor updater
* preserving existing tezsign_id on full update
* added table comparison
* added fix for tezsing_id injection
* added --help/-h command

---------

Co-authored-by: v <cryi@tutanota.com>

--- a/.github/template/amend-image/action.yml
+++ b/.github/template/amend-image/action.yml
@@ -54,12 +54,16 @@ runs:
   - name: Reconfigure to dev image
     if: ${{ inputs.tezsign_flavour == 'dev' }}
     shell: bash
+    env:
+      IMAGE_ID: ${{ inputs.image_id }}.dev
     run: |
       sudo docker run -e CGO_ENABLED=0 --rm --privileged -v ${{ github.workspace }}/:/work tezsign/builder:latest ./tools/bin/builder ./imgs/${{ inputs.source_artifact }}.img ./imgs/${{ inputs.image_id }}.dev.img.xz dev
 
   - name: Reconfigure to prod image
     if: ${{ inputs.tezsign_flavour == 'prod' }}
     shell: bash
+    env:
+      IMAGE_ID: ${{ inputs.image_id }}
     run: |
       sudo docker run -e CGO_ENABLED=0 --rm --privileged -v ${{ github.workspace }}/:/work tezsign/builder:latest ./tools/bin/builder ./imgs/${{ inputs.source_artifact }}.img ./imgs/${{ inputs.image_id }}.img.xz prod
 
